# sot-talos-balance

./: .git-blame-ignore-revs  CMakeLists.txt  README.md  package.xml  setup.cfg
doc/: Doxyfile.extra.in  Overview.md  installation.md  running.md
include/sot/talos_balance/: admittance-controller-end-effector.hh  ankle-admittance-controller.hh  ankle-joint-selector.hh  boolean-identity.hh  com-admittance-controller.hh  coupled-admittance-controller.hh  dcm-com-controller.hh  dcm-controller.hh  dcm-estimator.hh  delay.hh  distribute-wrench.hh  dummy-dcm-estimator.hh  dummy-walking-pattern-generator.hh  euler-to-quat.hh  example.hh  foot-force-difference-controller.hh  ft-calibration.hh  ft-wrist-calibration.hh  hip-flexibility-compensation.hh  int-identity.hh  joint-position-controller.hh  nd-trajectory-generator.hh  nmpc-online.hh  pose-quaternion-to-matrix-homo.hh  qualisys-client.hh  quat-to-euler.hh  round-double-to-int.hh  saturation.hh  simple-admittance-controller.hh  simple-controller-6d.hh  simple-distribute-wrench.hh  simple-pid.hh  simple-pidd.hh  simple-reference-frame.hh  simple-state-integrator.hh  simple-zmp-estimator.hh  state-transformation.hh  (+3 more)
plot/: plot_all_des.xml  plot_all_gen.xml  plot_base_estimator.xml  plot_com.xml  plot_com_gen.xml  plot_feet_des.xml  plot_forces_diff.xml  plot_ft_calibration.xml  plot_sot_zmp.xml  plot_tau_ankle_right.xml  plot_wrenchDistrib.xml  plot_wrench_distrib.xml  plot_xy.xml  plot_xy_gz.xml  plot_xy_gznostf.xml  plot_xy_madgwick.xml  plot_xy_madgwick_w.xml  plot_xyz_gz.xml  plot_zmp.xml  plot_zmp_com.xml
ros/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  admittance-controller-end-effector-python.hh  admittance-controller-end-effector.cpp  ankle-admittance-controller-python.hh  ankle-admittance-controller.cpp  ankle-joint-selector-python.hh  ankle-joint-selector.cpp  boolean-identity-python.hh  boolean-identity.cpp  com-admittance-controller-python.hh  com-admittance-controller.cpp  coupled-admittance-controller-python.hh  coupled-admittance-controller.cpp  dcm-com-controller-python.hh  dcm-com-controller.cpp  dcm-controller-python.hh  dcm-controller.cpp  dcm-estimator-python.hh  dcm-estimator.cpp  delay-python.hh  distribute-wrench-python.hh  distribute-wrench.cpp  dummy-dcm-estimator-python.hh  dummy-dcm-estimator.cpp  dummy-walking-pattern-generator-python.hh  dummy-walking-pattern-generator.cpp  embedded_main.cpp  euler-to-quat-python.hh  euler-to-quat.cpp  example-python.hh  example.cpp  fooClass.pyx  foot-force-difference-controller-python.hh  foot-force-difference-controller.cpp  ft-calibration-python.hh  ft-calibration.cpp  ft-wrist-calibration-python.hh  ft-wrist-calibration.cpp  hip-flexibility-compensation-python.hh  (+44 more)
src/dynamic_graph/sot_talos_balance/: create_entities_utils.py  extract_torque_motorenc_joint_enc_batteries.py  meta_task_config.py  meta_task_joint.py  meta_task_pose.py  motor_parameters.py
src/dynamic_graph/sot_talos_balance/talos/: balance_ctrl_conf.py  balance_ctrl_sim_conf.py  base_estimator_conf.py  base_estimator_sim_conf.py  current_controller_conf.py  current_controller_sim_conf.py  distribute_conf.py  ft_calibration_conf.py  ft_wrist_calibration_conf.py  joint_torque_controller_conf.py  joint_torque_controller_sim_conf.py  parameter_server_conf.py
src/dynamic_graph/sot_talos_balance/test/: CMakeLists.txt  appli_COMTraj.py  appli_admittance_drill.py  appli_admittance_end_effector.py  appli_admittance_single_joint.py  appli_admittance_single_joint_velocity_based.py  appli_ankle_admittance.py  appli_base_estimator.py  appli_base_estimator_integrator.py  appli_coupled_ankle_admittance.py  appli_dcmAnkleControl.py  appli_dcmComControl.py  appli_dcmComZmpControl.py  appli_dcmCopControl.py  appli_dcmCoupledAndSingleAnkleControl.py  appli_dcmCoupledAnkleControl.py  appli_dcmSingleAnkleControl.py  appli_dcmSingleCopControl.py  appli_dcmZmpControl.py  appli_dcmZmpControl_distribute.py  appli_dcmZmpControl_estimator.py  appli_dcmZmpControl_feedback.py  appli_dcmZmpControl_file.py  appli_dcmZmpCopControl.py  appli_dcmZmpFootControl.py  appli_dcmZmpWaistControl.py  appli_dcm_estimator.py  appli_dcm_zmp_control.py  appli_dcm_zmp_control_bellStep.py  appli_dcm_zmp_control_distribute.py  appli_dcm_zmp_control_ffdc.py  appli_dcm_zmp_control_ffdc_fp.py  appli_dcm_zmp_control_flex.py  appli_dcm_zmp_control_flex_online.py  appli_dcm_zmp_control_flex_openloop.py  appli_dcm_zmp_control_integrator.py  appli_dcm_zmp_control_mlp.py  appli_feet_admittance.py  appli_ffSubscriber.py  appli_hip_flexibility_compensation.py  (+59 more)
src/dynamic_graph/sot_talos_balance/utils/: control_utils.py  filter_utils.py  gazebo_utils.py  plot_utils.py  run_test_utils.py  sot_utils.py
src/libs/: __init__.c  __init__.pxd  sum.c  sum.pxd  sum.py
src/robot/: robot-wrapper.cpp
src/sdk_qualisys/: Markup.cpp  Network.cpp  RTPacket.cpp  RTProtocol.cpp
src/sot_talos_balance/: create_entities_utils.py
src/sot_talos_balance/talos/: parameter_server_conf.py
src/sot_talos_balance/test/: CMakeLists.txt  appli_dcm_zmp_control_flex.py  appli_dcm_zmp_control_flex_online.py  appli_dcm_zmp_control_mlp.py  appli_posture.py  test_dcm_zmp_control_flex.py  test_dcm_zmp_control_flex_online.py
src/utils/: statistics.cpp
tests/: CMakeLists.txt  dummy.cpp  test_distribute.cpp
tests/python/: CMakeLists.txt  simulate-ZMP-DCM-regulation-of-LIP.py  test_ankle_joint_selector.py  test_base_estimator.py  test_com_admittance.py  test_com_estimation.py  test_control.py  test_ctrl_manager.py  test_cython.py  test_dcm_controller.py  test_dcm_controller_talos.py  test_dcm_distribute.py  test_dcm_estimator.py  test_distribute.py  test_dummy_dcm_estimator.py  test_dummy_wpgen.py  test_eulerquat.py  test_example.py  test_foot_force_difference_controller.py  test_ft_calibration.py  test_nmpc_online.py  test_round_double_to_int.py  test_saturation.py  test_simple_admittance.py  test_simple_distribute.py  test_simple_state_integrator.py  test_simple_zmp_estimator.py  test_state_transformation.py
utils/: make_phase.py  plot_data.py  plot_phase.py
(+10 files in other folders)
